@@ -1,5 +1,7 @@
 -- release 2.6.1
 - enhanced security: replace secpr5121 with secp256r1 for default ECGenParameterSpec
+- enhanced security: Use of a cryptographic algorithm with insufficient key size - Throw InvalidAlgorithmParameterException when use of a cryptographic algorithm with insufficient key size to call EncryptorUtil.generateKeyPair()
+- enhanced security: fixed polynomial regular expression used on uncontrolled data (FormatterUtil)
 - enhanced logging: log detailed information and stack trace health check failure
 - enhanced logging: Netty channel handler exception will be logged only when:
     1. run with -debug
